--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "fscreen": "^1.0.2",
-    "matter-js": "^0.14.2"
+    "matter-js": "^0.14.2",
+    "twgl.js": "^4.4.0"
   }
 }
