--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "airgame",
   "version": "1.0.0",
   "description": "",
+  "mode": "development",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html --no-hmr",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "fscreen": "^1.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "matter-js": "^0.14.2",
-    "twgl.js": "^4.4.0"
+    "twgl.js": "^4.4.0",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
