--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fscreen": "^1.0.2",
     "html-webpack-plugin": "^3.2.0",
     "matter-js": "^0.14.2",
+    "raw-loader": "^0.5.1",
     "twgl.js": "^4.4.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
